--- a/index.html
+++ b/index.html
@@ -10,11 +10,40 @@
 
         <title>Inluencer Product</title>
 
-
     </head>
 
     <body>
+        <!-- start-header -->
+        <header>
+            <div class="menu-area">
+                <div class="headline">
+                    <h1>Influencer product</h1>
+                </div>
+                <div class="navbar">
+                    <ul>
+                        <li><a href="#">home</a></li>
+                        <li><a href="#">Product</a></li>
+                        <li><a href="#">Sign Up</a></li>
+                        <li><a href="#">Login</a></li>
+                        <li>
 
+
+                            <span class="icon"><i class="fa-solid fa-magnifying-glass"></i></span>
+                        </li>
+
+                        <li>
+
+
+                            <span class="icon"><i class="fa-solid fa-user"></i></span>
+                        </li>
+                    </ul>
+                </div>
+
+            </div>
+
+        </header>
+
+        <!-- End-header -->
     </body>
 
 </html>
