--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-        <!-- start-header -->
+        <!-- ---------------------------------start-header----------------------------------------------- -->
         <header>
             <div class="menu-area">
                 <div class="headline">
@@ -21,7 +21,7 @@
                 </div>
                 <div class="navbar">
                     <ul>
-                        <li><a href="#">home</a></li>
+                        <li><a href="#">Home</a></li>
                         <li><a href="#">Product</a></li>
                         <li><a href="#">Sign Up</a></li>
                         <li><a href="#">Login</a></li>
@@ -43,7 +43,251 @@
 
         </header>
 
-        <!-- End-header -->
+        <!-- ----------------------------End-header------------------------------>
+
+
+
+        <main>
+            <!--------------------------Start bannaer----------------------------->
+            <section class="banner-area">
+
+                <div class="banner-info">
+                    <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod, modi?</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Id illo porro a ipsa tempore adipisci,
+                        minus unde odit nemo sint! Iusto similique rerum aut tempore quod veritatis aliquam nam quasi?
+                    </p>
+                    <button class="btn"> preebook now <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                </div>
+                <div class="banner-img"><img src="images/main-camera.png" alt="main-camera"></div>
+            </section>
+            <!-- -----------------------------------End Banner-------------------------------- -->
+
+            <section class="brand-banner">
+                <div class="brands"><img src="Icon/Alibaba.svg" alt=""></div>
+                <div class="brands"><img src="Icon/Amazon.svg" alt=""></div>
+                <div class="brands"><img src="Icon/Daraz.pk Logo.svg" alt=""></div>
+                <div class="brands"><img src="Icon/Ebay.svg" alt=""></div>
+                <div class="brands"><img src="Icon/Rakuten.svg" alt=""></div>
+                <div class="brands"><img src="Icon/Target.svg" alt=""></div>
+                <div class="brands"><img src="Icon/Walmart.svg" alt=""></div>
+            </section>
+
+            <section class="our-collection">
+
+                <h1 class="collection-Heading">Popular Collection</h1>
+                <div class="product-container">
+                    <div class="card">
+                        <div class="product-image"><img src="images/drone.png" alt=""></div>
+                        <div class="product-name">
+                            <h1 class="Product-title">Drone</h1>
+                            <div class="price">$78.55</div>
+                            <div class="rating">
+                                <div class="rating-star">
+
+
+
+
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star filled"></i>
+                                    <i class="fa-solid fa-star-half-stroke "></i>
+                                </div>
+                                <div class="rating-point">
+                                    <p>4.6</p>
+                                </div>
+                                <div class="product-details">
+                                    <p>High Quality light weight drone with 360 degree flexible camera
+                                    <p>
+                                </div>
+                            </div>
+
+                            <div class="card">
+                                <div class="product-image"><img src="images/drone.png" alt=""></div>
+                                <div class="product-name">
+                                    <h1 class="Product-title">Drone</h1>
+                                    <div class="price">$78.55</div>
+                                    <div class="rating">
+                                        <div class="rating-star">
+
+
+
+
+                                            <i class="fa-solid fa-star filled"></i>
+                                            <i class="fa-solid fa-star filled"></i>
+                                            <i class="fa-solid fa-star filled"></i>
+                                            <i class="fa-solid fa-star filled"></i>
+                                            <i class="fa-solid fa-star-half-stroke "></i>
+                                        </div>
+                                        <div class="rating-point">
+                                            <p>4.6</p>
+                                        </div>
+                                        <div class="product-details">
+                                            <p>High Quality light weight drone with 360 degree flexible camera
+                                            <p>
+                                        </div>
+                                    </div>
+
+                                    <div class="card">
+                                        <div class="product-image"><img src="images/drone.png" alt=""></div>
+                                        <div class="product-name">
+                                            <h1 class="Product-title">Drone</h1>
+                                            <div class="price">$78.55</div>
+                                            <div class="rating">
+                                                <div class="rating-star">
+
+
+
+
+                                                    <i class="fa-solid fa-star filled"></i>
+                                                    <i class="fa-solid fa-star filled"></i>
+                                                    <i class="fa-solid fa-star filled"></i>
+                                                    <i class="fa-solid fa-star filled"></i>
+                                                    <i class="fa-solid fa-star-half-stroke "></i>
+                                                </div>
+                                                <div class="rating-point">
+                                                    <p>4.6</p>
+                                                </div>
+                                                <div class="product-details">
+                                                    <p>High Quality light weight drone with 360 degree flexible camera
+                                                    <p>
+                                                </div>
+                                            </div>
+
+                                            <div class="card">
+                                                <div class="product-image"><img src="images/drone.png" alt=""></div>
+                                                <div class="product-name">
+                                                    <h1 class="Product-title">Drone</h1>
+                                                    <div class="price">$78.55</div>
+                                                    <div class="rating">
+                                                        <div class="rating-star">
+
+
+
+
+                                                            <i class="fa-solid fa-star filled"></i>
+                                                            <i class="fa-solid fa-star filled"></i>
+                                                            <i class="fa-solid fa-star filled"></i>
+                                                            <i class="fa-solid fa-star filled"></i>
+                                                            <i class="fa-solid fa-star-half-stroke "></i>
+                                                        </div>
+                                                        <div class="rating-point">
+                                                            <p>4.6</p>
+                                                        </div>
+                                                        <div class="product-details">
+                                                            <p>High Quality light weight drone with 360 degree flexible
+                                                                camera
+                                                            <p>
+                                                        </div>
+                                                    </div>
+
+                                                    <div class="card">
+                                                        <div class="product-image"><img src="images/drone.png" alt="">
+                                                        </div>
+                                                        <div class="product-name">
+                                                            <h1 class="Product-title">Drone</h1>
+                                                            <div class="price">$78.55</div>
+                                                            <div class="rating">
+                                                                <div class="rating-star">
+
+
+
+
+                                                                    <i class="fa-solid fa-star filled"></i>
+                                                                    <i class="fa-solid fa-star filled"></i>
+                                                                    <i class="fa-solid fa-star filled"></i>
+                                                                    <i class="fa-solid fa-star filled"></i>
+                                                                    <i class="fa-solid fa-star-half-stroke "></i>
+                                                                </div>
+                                                                <div class="rating-point">
+                                                                    <p>4.6</p>
+                                                                </div>
+                                                                <div class="product-details">
+                                                                    <p>High Quality light weight drone with 360 degree
+                                                                        flexible camera
+                                                                    <p>
+                                                                </div>
+                                                            </div>
+
+                                                            <div class="card">
+                                                                <div class="product-image"><img src="images/drone.png"
+                                                                        alt=""></div>
+                                                                <div class="product-name">
+                                                                    <h1 class="Product-title">Drone</h1>
+                                                                    <div class="price">$78.55</div>
+                                                                    <div class="rating">
+                                                                        <div class="rating-star">
+
+
+
+
+                                                                            <i class="fa-solid fa-star filled"></i>
+                                                                            <i class="fa-solid fa-star filled"></i>
+                                                                            <i class="fa-solid fa-star filled"></i>
+                                                                            <i class="fa-solid fa-star filled"></i>
+                                                                            <i
+                                                                                class="fa-solid fa-star-half-stroke "></i>
+                                                                        </div>
+                                                                        <div class="rating-point">
+                                                                            <p>4.6</p>
+                                                                        </div>
+                                                                        <div class="product-details">
+                                                                            <p>High Quality light weight drone with 360
+                                                                                degree flexible camera
+                                                                            <p>
+                                                                        </div>
+                                                                    </div>
+
+                                                                    <div class="card">
+                                                                        <div class="product-image"><img
+                                                                                src="images/drone.png" alt=""></div>
+                                                                        <div class="product-name">
+                                                                            <h1 class="Product-title">Drone</h1>
+                                                                            <div class="price">$78.55</div>
+                                                                            <div class="rating">
+                                                                                <div class="rating-star">
+
+
+
+
+                                                                                    <i
+                                                                                        class="fa-solid fa-star filled"></i>
+                                                                                    <i
+                                                                                        class="fa-solid fa-star filled"></i>
+                                                                                    <i
+                                                                                        class="fa-solid fa-star filled"></i>
+                                                                                    <i
+                                                                                        class="fa-solid fa-star filled"></i>
+                                                                                    <i
+                                                                                        class="fa-solid fa-star-half-stroke "></i>
+                                                                                </div>
+                                                                                <div class="rating-point">
+                                                                                    <p>4.6</p>
+                                                                                </div>
+                                                                                <div class="product-details">
+                                                                                    <p>High Quality light weight drone
+                                                                                        with 360 degree flexible camera
+                                                                                    <p>
+                                                                                </div>
+                                                                            </div>
+
+                                                                        </div>
+
+
+
+                                                                    </div>
+
+
+
+                                                                </div>
+
+            </section>
+
+
+
+        </main>
+
     </body>
 
 </html>
